--- a/CSS/password.css
+++ b/CSS/password.css
@@ -17,8 +17,9 @@ input[type=text], input[type=password] {
   padding: 12px 20px;
   margin: 10px 0 15px 0;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: none;
   box-sizing: border-box;
+  border-radius: 25px;
 }
 
 /* Set a style for all buttons */
@@ -104,7 +105,8 @@ p {
 b {
 	font-family: "open-sans";
 	font-size: 13pt;
-	color: dimgrey;
+	color: #454545;
+	margin-left: 10px;
 }
 
 header {
